# college-chatbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER_DEPLOYMENT.md  Dockerfile  LINTING_SETUP.md  README.md  REVERSE_PROXY_SETUP.md  chainlit.md  deploy.ps1  deploy.sh  example.env  pyproject.toml  requirements-dev.txt  requirements.txt  setup-reverse-proxy.sh
.chainlit/: config.toml
.chainlit/translations/: en-US.json
chatbot/: app.py  chatbot_workflow.md  config.py
chatbot/components/: attributes.py  clarification_generator.py  college_reranker.py  college_utils.py  data_loader.py  feature_analyzer.py  pdf_generator.py  retriever.py  suggestion_generator.py  vectorstore.py
chatbot/evaluation/: ragas_eval.py  test_questions.py
chatbot/prompts/: clarifying_questions.md  reranking.md  search_suggestions.md  self_retrieval.md
chatbot/utils/: generate_rag_documents.py  json_structure_analyzer.py  prompt_loader.py
chatbot/utils/markdown_generator/: __init__.py  formatters.py  json_to_articles.py  json_to_markdown.py  utils.py
chatbot/utils/metadata_extractor/: __init__.py  core.py  utils.py
chatbot/workflow/: __init__.py  builder.py  messages.py  node_admission_risk.py  node_clarifying_questions.py  node_completion.py  node_metadata_state.py  node_reranking.py  node_sat.py  node_search.py  node_visualisation.py  routers.py  state.py  utils.py
data/chatbot/peterson_json_articles/: abilene-christian-university_b7995b4e937afd649a48b7e80cc42745.md  abraham-baldwin-agricultural-college_ebc7b139664a05a244cc70ca7b7eaa89.md  academy-of-art-university_75cd3f82be3b3d8aab6fe068f1b2b287.md  adams-state-university_e085018ee289ca3ba9832bb12ea404a7.md  adelphi-university_74f24acda1f975e346915ce6152238bc.md  adrian-college_77e694c567f5fbe51a641eb73f2ec32a.md  adventhealth-university_915dfde83a2fdb34787bf1a24f4613f5.md  agnes-scott-college_cb02bcb279ffef0336fe3480bfb8ca6f.md  alabama-state-university_5069509d5f2d1eedad9d55681b78604e.md  alaska-bible-college_8403a84a459c1a39279aa905a09ed489.md  alaska-pacific-university_22eb1bfd744fea1144ce26b51f28527c.md  albany-college-of-pharmacy-and-health-sciences_69288662edaf564f8b1a83213891c5d8.md  albany-state-university_52230e0749bab2de688fd34bb8739c08.md  albany-technical-college_02e280e36af834cb220f7d82d2c3cddd.md  albertus-magnus-college_c67191c3b10c18d997e8c7009fc1df57.md  albion-college_954a574d97b4ea70f15c5ff34c256c84.md  albright-college_b5e391cd0da505af3154048d02cccfa4.md  alcorn-state-university_e7ee2872ede7737825f3516370a052e7.md  alfred-university_26c6e28abb138d60eea6d8fbad344d66.md  alice-lloyd-college_abde56ab1639bbc2189aeecced4261d1.md  allegheny-college_99ca9ab1cd05b67a25ada427a3f9cf89.md  allen-college_eab328a8a3f74be90ab02ddb6061630c.md  allen-university_3237c8c05e96af26062b5c9f0e67e840.md  alliant-international-university-san-diego_05789b58fc64f64eb1cade5a3ba0d572.md  alma-college_3ba984098f5abece5491ae1beffd1b22.md  alvernia-university_968adbe5df544255096329f9db8db40f.md  alverno-college_81b62a7699c36cce2bed86e93741c017.md  amberton-university_6898035c2005ce5c47af9dfb81983212.md  american-baptist-college_a04430d505371404bfbe28727993ac1e.md  american-international-college_46facd0b0e490e665f1cd8878bc7b66a.md  american-university_ee179797176f6e17f9102184bd9cd1e6.md  amherst-college_432f78631508d48a6284b95f1b3b62c3.md  anderson-university_2279ea44240a1b014a571879081fa8ac.md  anderson-university_3fafa1da6d4a2a6816dd6c6734d59545.md  andrews-university_a62ba49a0b96987e4a5ab6e6d5215685.md  (+1492 more)
data/scripts/: README.md
projectutils/: env.py  logger.py
public/: wide-layout.css
(+3083 files in other folders)
